--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -67,7 +67,7 @@
             <%# Palm version %>
             <span class="hide-fully--non-palm">
               <%= phone_link store_phone_number(@centre_stores, @product.retail_chain), class: 'btn btn--full btn--main btn--main-dark btn--main-lrg' do |phone_number| %>
-                <span class="txt-truncate block">
+                <span class="txt-truncate">
                   <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
                   Call <%= @product.retail_chain_name %>
                 </span>
@@ -98,7 +98,7 @@
           <div class="detail-view__divider--palm island island--center">
             <%= link_to @product_redirection_url, target: "_blank",
               class: "btn btn--full btn--main btn--main-dark btn--main-lrg js-redirect", rel: "external nofollow" do %>
-              <span class="txt-truncate block">
+              <span class="txt-truncate">
                 <span class="icon icon--external-link icon--lrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
                 Buy from <%= @product.retail_chain_name %>
               </span>
