--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -201,9 +201,9 @@
 <%# See More %>
 <% if @product.category_hierarchy.present? %>
   <section class="detail-view__divider--top-btm detail-view__divider--top island" aria-labelledby="see-more">
-    <h2 class="detail-view__hdr-sub detail-view__mrg-off hn" id="see-more">See More</h2>
-    <nav class="" role="navigation">
-      <ul class="horiz-list horiz-list--spacing-base islet-top">
+    <h2 class="detail-view__hdr-sub hn" id="see-more">See More</h2>
+    <nav role="navigation">
+      <ul class="horiz-list horiz-list--spacing-base">
         <% @product.category_hierarchy.each_with_index do |category, category_count| %>
           <li>
             <%= link_to category_canonical_url(category_count), class: "btn btn--main btn--main-dark btn--arrow" do %>
