--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -111,12 +111,14 @@
 			<%# //Centre select (non-palm) %>
 
       <%# Search toggle %>
-      <div class="search-toggle-favs js-disabled-hide">
-        <button type="button" class="btn js-global-search-toggle" toggle-visibility="site-search" aria-owns="site-search">
-          <span class="hide-visually">Show site search</span>
-          <span class="icon icon--search icon--spacing icon--flush-top icon--kilo" aria-hidden="true"></span>
-        </button>
-      </div>
+      <% if national_product_index? %>
+        <div class="search-toggle-favs js-disabled-hide">
+          <button type="button" class="btn js-global-search-toggle" toggle-visibility="site-search" aria-owns="site-search">
+            <span class="hide-visually">Show site search</span>
+            <span class="icon icon--search icon--spacing icon--flush-top icon--kilo" aria-hidden="true"></span>
+          </button>
+        </div>
+      <% end %>
       <%# //Search toggle %>
 
       <%# Global search %>
