cleanup css and add classes for retailer link

--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -85,7 +85,7 @@
 /* Modifier: spacing - remove gutter for the first item */
 .horiz-list--spacing-base,
 .horiz-list--spacing-half {
-	> li:first-child {margin-right: 0;}
+	> li:last-child {margin-right: 0;}
 }
 
 /* Modifier: spacing base */
