add correct drop down menu base class to nearby centres drop down

--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -10,7 +10,7 @@
       </em>
       <span>See nearby centres</span>
     </p>
-    <div class="drop-down-container">
+    <div class="drop-down-menu drop-down-container">
 
       <%# Centre selector trigger %>
       <button type="button" class="drop-down-menu__trigger btn btn--full btn--full-left btn--main btn--main-dark btn--pointer" toggle-visibility="no-products-nearby-centre">
