--- a/app/views/styleguide/modules/_no_content_fallback_msg.html.erb
+++ b/app/views/styleguide/modules/_no_content_fallback_msg.html.erb
@@ -2,7 +2,8 @@
 <div class="no-content-fallback-msg $modifier_class">
   <p>
     <span class="icon icon--deals icon--flush-top" aria-hidden="true"></span>
-    <em class="h1">No deals at this centre</em> <span>See nearby centres</span>
+    <em class="h1">No deals at this centre</em>
+    <span>See nearby centres</span>
   </p>
 </div>
 <% end %>
