--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -90,6 +90,40 @@
 
           <%# //When product is available at a centre %>
 
+        <%- else -%>
+
+          <%# Display list of centres when on national view %>
+          <div class="detail-view__product-not-avble detail-view__divider">
+            <div class="vert-align">
+              <div class="vert-align__inner">
+                <span class="icon icon--map icon--flush-top" aria-hidden="true"></span>
+                <span class="icon icon--pin" aria-hidden="true"></span>
+                <p>Choose a centre to see availability</p>
+                <div class="drop-down-menu drop-down-container islet-top">
+
+                  <button type="button" class="drop-down-menu__trigger btn btn--full btn--full-left btn--main btn--main-dark btn--pointer btn--pointer-padding-med" toggle-visibility="product-details-centre-selection-menu">
+                    Select Centre
+                    <span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span>
+                  </button>
+
+                  <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="product-details-centre-selection-menu">
+                    <dl class="drop-down-menu__list">
+                      <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
+                        <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
+                        <% @centres[state].each do |centre| %>
+                          <dd class="drop-down-menu__divider">
+                            <%= link_to centre.short_name, context_aware_link(centre), class: 'btn btn--full btn--full-left' %>
+                          </dd>
+                        <% end %>
+                      <% end %>
+                    </dl>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
         <%- end -%>
         <%# //Check if a product is available at a centre %>
 
