add extra class to movies, events and deals icons on no content pages for correct icon size

--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -12,7 +12,7 @@
   <%# No deals fallback message %>
   <div class="no-content-fallback-msg">
     <p>
-      <span class="icon icon--deals icon--flush-top" aria-hidden="true"></span>
+      <span class="no-content-fallback-msg__icon icon icon--deals icon--flush-top" aria-hidden="true"></span>
       <em class="h1">No deals at this centre</em>
       <span>See nearby centres</span>
     </p>
