--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,7 @@
   <%# No Movies fallback message %>
   <div class="no-content-fallback-msg no-content-fallback-msg--flush">
     <p>
-      <span class="icon icon--video icon--flush-top" aria-hidden="true"></span>
+      <span class="no-content-fallback-msg__icon icon icon--video icon--flush-top" aria-hidden="true"></span>
       <em class="h1">No movies at this centre</em>
       <span>See nearby centres</span>
     </p>
