add extra classes for styleguide

--- a/app/views/styleguide/modules/_no_content_fallback_msg.html.erb
+++ b/app/views/styleguide/modules/_no_content_fallback_msg.html.erb
@@ -1,7 +1,7 @@
 <%= styleguide_block 'No Content Fallback Message' do |style| %>
 <div class="no-content-fallback-msg $modifier_class">
   <p>
-    <span class="icon icon--deals icon--flush-top" aria-hidden="true"></span>
+    <span class="no-content-fallback-msg__icon icon icon--deals icon--flush-top" aria-hidden="true"></span>
     <em class="h1">No deals at this centre</em>
     <span>See nearby centres</span>
   </p>
