remove pjax from giftcard toggle for smoother transitions

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -345,6 +345,8 @@
             /* IE 9 */
             .ie-9 & {color: darken($color-grey-med-3, 5%);}
           }
+
+          .drop-down-menu {text-align: left}
     }
   }
 
