--- a/app/assets/stylesheets/partials/modules/_stores-list.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-list.scss
@@ -18,7 +18,7 @@
   dt {
     background-color: $color-grey-light-3;
     font-weight: normal;
-    border-top: 1px solid $color-grey-med-3;
+    border-bottom: 1px solid $color-grey-med-3;
     @include to-rem(padding-top padding-bottom, $spacing-sixth);
 
     &:first-child {border-top: 0;}
@@ -30,7 +30,7 @@
 
   /* Store items */
   dd {
-    border-top: 1px solid $color-grey-med-3;
+    border-bottom: 1px solid $color-grey-med-3;
 
     /* Bottom border for last child */
     &:last-child {border-bottom: 1px solid $color-grey-med-3;}
