--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -136,7 +136,7 @@
             <%# //Applied category %>
 
             <%# Gift card filter %>
-            <form id="giftCardForm" action="<%= request.path %>" data-pjax method="get" class="stores-maps__filters__item js-map-view-state">
+            <form id="giftCardForm" action="<%= request.path %>" method="get" class="stores-maps__filters__item js-map-view-state">
               <input type="hidden" name="map" value="{{viewingMap}}">
               <legend class="hide-visually">Gift card filter</legend>
               <label for="gift-card-store-filter" class="btn btn--main btn--main-white btn--main-toggle btn--main-toggle-ios <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
