--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -82,14 +82,24 @@
 
 .horiz-list--comma > li:after {content: ",";}
 
-/* Modifier: spacing - remove gutter for the first item */
-.horiz-list--spacing-base,
-.horiz-list--spacing-half {
-	> li:last-child {margin-right: 0;}
-}
-
-/* Modifier: spacing base */
+/* Modifier: right spacing base */
 .horiz-list--spacing-base > li {@include to-rem(margin-right, $spacing-base);}
 
-/* Modifier: spacing half */
+/* Modifier: right spacing half */
 .horiz-list--spacing-half > li {@include to-rem(margin-right, $spacing-half);}
+
+/* Modifier: right spacing micro */
+.horiz-list--spacing-micro > li {@include to-rem(margin-right, $spacing-micro);}
+
+/* Remove right spacing from the last item */
+.horiz-list--spacing-base,
+.horiz-list--spacing-half,
+.horiz-list--spacing-micro {
+  > li:last-child {margin-right: 0;}
+}
+
+/* Modifier: bottom spacing base */
+.horiz-list--spacing-base-wrap > li {@include to-rem(margin-bottom, $spacing-base);}
+
+/* Modifier: bottom spacing half */
+.horiz-list--spacing-half-wrap > li {@include to-rem(margin-bottom, $spacing-half);}
