--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -166,26 +166,35 @@
 
 	}
 
-  /* Modifier: Buttons with arrow on the right */
+  /* Modifier: append an arrow to right edge using CSS triangle */
   .btn--arrow {
     position: relative;
+    @include to-em(padding, $spacing-half+1 $spacing-base+$spacing-half $spacing-half+1 $spacing-base);
 
-    .icon--arrow-right-full:before {
+    /* CSS triangle, note: if the font size increases on the button then the `border` size usually is around `4px` more than the font size */
+    &:after {
+      content: "";
       @extend %transition-subtle;
       position: absolute;
-      @include to-rem(right, -16);
-      top: 1px;
-      @include font-size(55, 0);
-      @include to-rem(line-height, 32);
-      line-height: 32px;
+      top: 0;
+      right: 0;
+      background-color: #fff;
+      width: 0;
+      height: 100%;
+      @include to-rem(border-top border-bottom, 16 solid transparent);
+      @include to-rem(border-left, 16 solid);
     }
 
-    &.btn--main-dark {
-      .icon--arrow-right-full:before {color: $color-grey-dark-3;}
+    /* Colour schemes */
 
-      &:hover .icon--arrow-right-full:before,
-      &:focus .icon--arrow-right-full:before {color: lighten($color-grey-dark-3, 10%) }
-    }
+    /* Dark */
+    &.btn--main-dark:after {border-left-color: $color-grey-dark-3;}
+
+    &.btn--main-dark:hover:after,
+    &.btn--main-dark:focus:after {border-left-color: lighten($color-grey-dark-3, 10%);}
+
+    /* Truncate text if too long - need to override the helper class `!important` keyword */
+    .txt-truncate {@include to-rem(max-width, 200, !important);}
   }
 
   /* Modifier: checkbox toggle */
