Rename btn--arow to btn--main-arrow. Add new modifiers to styleguide

--- a/app/views/styleguide/buttons/_main.html.erb
+++ b/app/views/styleguide/buttons/_main.html.erb
@@ -3,6 +3,11 @@
 
   <a href="#" class="btn btn--main $modifier_class">Button (anchor)</a>
 
+  <% example '.btn--main-arrow' do %>
+    <button type="button" class="btn btn--main btn--main-dark btn--main-arrow">Button (button)</button>
+    <a href="#" class="btn btn--main btn--main-dark btn--main-arrow">Button (anchor)</a>
+  <% end %>
+
   <% example '.btn--main-checkbox-toggle' do %>
     <label class="btn btn--main btn--main-white btn--main-checkbox-toggle">
       <input type="checkbox" class="btn--main-checkbox-toggle__input"><!--
