--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -12,6 +12,9 @@
   .horiz-list--slash             - Slash separated.
   .horiz-list--spacing-base			 - Base spacing between list items.
   .horiz-list--spacing-half      - Half spacing between list items.
+  .horiz-list--spacing-micro     - Micro spacing between list items.
+  .horiz-list--spacing-base-wrap - Bottom spacing base.
+  .horiz-list--spacing-half-wrap - Bottom spacing half.
 
   Styleguide Horizontal List
 */
