--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -11,6 +11,7 @@
   .btn--main-white            - White
   .btn--main-compact          - Compact - decrease padding
   .btn--main-lrg              - Large - increase top/bottom padding
+  .btn--main-arrow            - Arrow on the right
   .btn--main-checkbox-toggle  - Checkbox toggle
   .btn--main-checkbox-toggle.btn--main-checkbox-toggle-icon  - When an icon is used within the checkbox toggle
 
@@ -167,7 +168,7 @@
 	}
 
   /* Modifier: append an arrow to right edge using CSS triangle */
-  .btn--arrow {
+  .btn--main-arrow {
     position: relative;
     @include to-em(padding, $spacing-half+1 $spacing-base+$spacing-half $spacing-half+1 $spacing-base);
 
