--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -12,8 +12,9 @@
   .btn--main-compact          - Compact - decrease padding
   .btn--main-lrg              - Large - increase top/bottom padding
   .btn--main-arrow            - Arrow on the right
-  .btn--main-checkbox-toggle  - Checkbox toggle
-  .btn--main-checkbox-toggle.btn--main-checkbox-toggle-icon  - When an icon is used within the checkbox toggle
+  .btn--main-toggle           - Shared modifier for checkbox and ios toggle modifiers
+  .btn--main-toggle-checkbox  - Checkbox toggle
+  .btn--main-toggle-ios       - iOS-style toggle
 
   Styleguide Button Main
 */
