Cleanup scss comments

--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -13,8 +13,8 @@
   .horiz-list--spacing-base			 - Base spacing between list items.
   .horiz-list--spacing-half      - Half spacing between list items.
   .horiz-list--spacing-micro     - Micro spacing between list items.
-  .horiz-list--spacing-base-wrap - Bottom spacing base.
-  .horiz-list--spacing-half-wrap - Bottom spacing half.
+  .horiz-list--spacing-base-wrap - Base spacing below list items.
+  .horiz-list--spacing-half-wrap - Half spacing below list items.
 
   Styleguide Horizontal List
 */
