add stores icon to no results view

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -208,8 +208,8 @@
 
         <%# No stores matching keyword filter message %>
         <div class="no-content-fallback-msg hide-fully js-stores-keyword-filter-no-stores-matching">
-          <span class="icon icon--stores icon--flush-top" aria-hidden="true"></span>
           <p role="status" aria-live="polite">
+            <span class="no-content-fallback-msg__icon icon icon--store icon--flush-top" aria-hidden="true"></span>
             <em class="h1">No Stores matching
               <span class="js-stores-keyword-filter-value"></span>
             </em>
