Reset bottom margin of stores list. Override display rule of tog vis to keep keyword filter inline with other filters in tablet view

--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -319,8 +319,10 @@
 
           /* Display all filters on one line */
           @include respond-min($iphone-landscape) {
-            display: inline-block;
-            width: 34%;
+            .stores-maps & {
+              display: inline-block;
+              width: 34%;
+            }
           }
 
           /* Reduce width to handle bigger map toggle button */
