Dont close search suggestions on input blur, only close them when clicking outside the suggestions

--- a/app/views/products/_national_view_dialog.html.erb
+++ b/app/views/products/_national_view_dialog.html.erb
@@ -25,7 +25,7 @@
       	  <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
       	  <% @centres[state].each do |centre| %>
       	    <dd class="drop-down-menu__divider">
-      	      <%= link_to centre.short_name, centre_products_path(centre_id: centre), class: 'btn btn--full btn--full-left' %>
+      	      <%= link_to centre.short_name, centre_products_path(centre_id: centre), class: 'btn btn--full btn--full-left', target: '_self' %>
       	    </dd>
       	  <% end %>
       	<% end %>
