--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -67,7 +67,7 @@
 		      <ul id="tab-<%= state.downcase %>" class="tab__content<%= ' is-active' if state == 'NSW' %>">
 		        <% @centres[state].each do |centre| %>
 		          <li>
-                <%= link_to context_aware_link(centre), class: 'container h1' do %>
+                <%= link_to context_aware_link(centre), class: 'container h1', target: '_self' do %>
                   <%= centre.short_name %>
                   <span class="icon icon--arrow-right-big icon--flush-top" aria-hidden="true"></span>
                 <% end %>
@@ -97,7 +97,7 @@
 	          		<dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
 		        		<% @centres[state].each do |centre| %>
 	          			<dd class="drop-down-menu__divider">
-                    <%= link_to centre.short_name, context_aware_link(centre), class: 'btn btn--full btn--full-left' %>
+                    <%= link_to centre.short_name, context_aware_link(centre), class: 'btn btn--full btn--full-left', target: '_self' %>
                   </dd>
 	          		<% end %>
 	          	<% end %>
