--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -62,7 +62,7 @@
                               <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon js-disabled-hide" aria-hidden="true"></span>
                             </div>
                           <% else %>
-                            <a ng-href="<%= centre_stores_category_path(@centre, category.code) %>{{queryParams}}" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer is-childless js-pjax-link-stores" ng-click="saveCategory('<%= category.code %>')"><%= category.name %></a>
+                            <a href="<%= centre_stores_category_path(@centre, category.code) %>" ng-href="<%= centre_stores_category_path(@centre, category.code) %>{{queryParams}}" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer is-childless js-pjax-link-stores" ng-click="saveCategory('<%= category.code %>')"><%= category.name %></a>
                           <% end %>
                         <% else %>
                           <% if filtering_gift_cards? && category.stores_accepting_gift_cards < 1 %>
@@ -106,7 +106,7 @@
                                 <span class="hide-visually"> (gift cards not available for this category)</span>
                               </div>
                             <% else %>
-                              <a ng-href="<%= centre_stores_category_path(@centre, sub_category.code) %>{{queryParams}}" class="btn btn--full btn--full-left js-pjax-link-stores" ng-click="saveCategory('<%= sub_category.code %>')" target="_self"><%= sub_category.name %></a>
+                              <a href="<%= centre_stores_category_path(@centre, sub_category.code) %>" ng-href="<%= centre_stores_category_path(@centre, sub_category.code) %>{{queryParams}}" class="btn btn--full btn--full-left js-pjax-link-stores" ng-click="saveCategory('<%= sub_category.code %>')" target="_self"><%= sub_category.name %></a>
                             <% end %>
                           </li>
                         <% end %>
