--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -153,7 +153,7 @@
             <%# //Gift card filter %>
 
             <%# Keyword Filter toggle %>
-            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-stores-keyword-filter-toggle" toggle-visibility="keyword-filter" aria-owns="keyword-filter">
+            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-disabled-hide js-stores-keyword-filter-toggle" toggle-visibility="keyword-filter" aria-owns="keyword-filter">
               <span class="hide-visually">Show filter stores by keyword</span>
               <span class="icon icon--keyword-filter icon--lrg" aria-hidden="true"></span>
             </button>
@@ -162,7 +162,7 @@
             <%# Keyword Filter %>
             <div id="keyword-filter" class="stores-maps__filters__item stores-maps__keyword-filter-input toggle-visibility js-disabled-hide">
               <label for="keyword-filter-input" class="hide-visually">Filter stores by keyword</label>
-              <input id="keyword-filter-input" type="search" placeholder="Enter store name" class="txt-input js-stores-keyword-filter-input">
+              <input id="keyword-filter-input" type="search" placeholder="Enter store name&#8230;" class="txt-input js-stores-keyword-filter-input">
             </div>
             <%# Keyword Filter %>
 
