clean up and tweak no results message for keyword filter

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -153,7 +153,7 @@
             <%# //Gift card filter %>
 
             <%# Keyword Filter toggle %>
-            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-disabled-hide js-stores-keyword-filter-toggle" toggle-visibility="keyword-filter" aria-owns="keyword-filter">
+            <button type="button" class="stores-maps__filters__item stores-maps__keyword-filter-toggle btn btn--main btn--main-white btn--main-compact-icon js-disabled-hide js-stores-keyword-filter-toggle" toggle-visibility="keyword-filter">
               <span class="hide-visually">Show filter stores by keyword</span>
               <span class="icon icon--keyword-filter icon--lrg" aria-hidden="true"></span>
             </button>
@@ -207,15 +207,15 @@
         </dl>
 
         <%# No stores matching keyword filter message %>
-        <div class="no-content-fallback-msg hide-fully js-stores-keyword-filter-no-stores-matching">
-          <p role="status" aria-live="polite">
+        <div class="no-content-fallback-msg no-content-fallback-msg--flush hide-fully js-stores-keyword-filter-no-results">
+          <p>
             <span class="no-content-fallback-msg__icon icon icon--store icon--flush-top" aria-hidden="true"></span>
             <em class="h1">No Stores matching
               <span class="js-stores-keyword-filter-value"></span>
             </em>
           </p>
         </div>
-        <%# //No product search results message %>
+        <%# //No stores matching keyword filter message %>
 
       </div>
       <%#//Stores list %>
