--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -113,7 +113,7 @@
       <%# Search toggle %>
       <% if national_product_index? %>
         <div class="search-toggle-favs js-disabled-hide">
-          <button type="button" class="btn js-global-search-toggle" toggle-visibility="site-search" aria-owns="site-search">
+          <button type="button" class="btn" toggle-visibility="site-search" aria-owns="site-search">
             <span class="hide-visually">Show site search</span>
             <span class="icon icon--search icon--spacing icon--flush-top icon--kilo" aria-hidden="true"></span>
           </button>
