--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -260,7 +260,8 @@
           /* Gift card toggle */
           .btn--main-toggle-ios {
             @include respond-min($ipad-landscape) {
-              @include to-em(padding-top padding-bottom, $spacing-half - 2);
+              @include to-em(padding-top, $spacing-half - 1);
+              @include to-em(padding-bottom, $spacing-half - 2);
               border: 1px solid $color-grey-med-2;
               background-color: transparent;
               box-shadow: none;
