--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -107,9 +107,9 @@
 
                   <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="product-details-centre-selection-menu">
                     <dl class="drop-down-menu__list">
-                      <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
+                      <% @store_centres_states.each do |state| %>
                         <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
-                        <% @centres[state].each do |centre| %>
+                        <% @store_centres[state].each do |centre| %>
                           <dd class="drop-down-menu__divider">
                             <%= link_to centre.short_name, context_aware_link(centre), class: 'btn btn--full btn--full-left' %>
                           </dd>
